added route for Api get requests

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1 id="title">Please write a review for this product:</h1>
+  <h1 id="title">Please, write a text for sentiment analysis:</h1>
   <form id="reviewForm">
     <textarea id="review" rows="4" cols="50"></textarea>
   </form>
